--- a/react/src/css/style.css
+++ b/react/src/css/style.css
@@ -5,6 +5,57 @@
     margin-bottom: 60px;
 }
 .inputsize{
-    width: 500px;
+    width: 400px;
 }
+
+
+.inputcolor{
+  color: white;
+  align-content: center;
+  /* margin-left: 20px; */
+}
+  .inputcolor:hover{
+    color:red;
+    border-radius: 10px;
+    background-color: white;
+  }
+
+  /* insert form css */
+  .form-container {
+    z-index: 1;
+    position: relative;
+    padding: 20px;
+    max-width: 4000px;
+    margin: auto;
+    background: #ffffff;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+  }
+  
+  .form-wrapper {
+    padding: 20px;
+  }
+  
+  .form-title {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #007bff;
+  }
+  
+  .submit-btn {
+    margin-top: 10px;
+  }
+  
+  @media (max-width: 768px) {
+    .form-container {
+      margin: 10px;
+      padding: 15px;
+    }
+  }
+
+
+  .btnsize{
+    width: 80px;
+  }
+  
 
