--- a/react/src/css/style.css
+++ b/react/src/css/style.css
@@ -1,4 +1,8 @@
-
+body
+{
+  padding: 0px;
+  margin: 0px;
+}
 #container
 {
     padding: 0px;
@@ -46,12 +50,7 @@
     margin-top: 10px;
   }
   
-  @media (max-width: 768px) {
-    .form-container {
-      margin: 10px;
-      padding: 15px;
-    }
-  }
+  
 
 
   .btnsize{
